# NeurusTestTask1

./: CMakeLists.txt  README.md
resources/: start.sh
src/: YoloObjectDetector.cpp  YoloObjectDetector.h  gstyolofilter.cpp  gstyolofilter.h
